Specs for future work