@@ -1,28 +1,54 @@
 ### 1. Research & Analysis
-- [x] Investigate `tree-sitter-language-pack` manifest structure and repository mappings.
-- [x] Document standard capture names for Python, Go, Rust, TypeScript, Kotlin, and Scala.
-- [x] Audit `tags.scm` availability for Groovy and determine fallback strategy.
 
-### 2. Infrastructure Expansion
-- [x] **Task 2.1**: Update `ParserDownloader.kt` to fetch `language_definitions.json` using the version-specific git tag (e.g., `v1.7.0`).
-- [x] **Task 2.2**: Implement `UpstreamQueryFetcher` to download and cache `tags.scm` files.
-    - [x] Handle URL construction with `directory` field support.
-    - [x] Implement local disk caching with revision-based purging.
-- [x] **Task 2.3**: Extend `TreeSitterLanguageProvider.kt` to expose extensions and FQN metadata from the versioned manifest.
+- [x] Investigate `tree-sitter-language-pack` C FFI library and platform support
+- [x] Evaluate alternatives (jtreesitter fix, bundled natives, WASM, C FFI via FFM)
+- [x] Document C FFI API surface (`ts_pack_process`, DownloadManager, error handling)
+- [x] Analyze reference Java FFM binding implementation
 
-### 3. Core Refactoring (jtreesitter Migration)
-- [ ] **Task 3.1**: Fix ABI mismatch by migrating the JVM binding layer from `ktreesitter:0.24.1` to the official `io.github.tree-sitter:jtreesitter:0.25.0` (using JDK 25 FFM API).
-    - [ ] Update `libs.versions.toml` to `jtreesitter:0.25.0`.
-    - [ ] Update `ParserDownloader.kt` to dynamically download the native `tree-sitter` core library (`tree-sitter.dll` etc.) from official GitHub releases.
-    - [ ] Rewrite `TreeSitterLanguageProvider.kt` to inject the downloaded core library into the FFM `SymbolLookup` chain and load native parsers.
-    - [ ] Generalize `TreeSitterDeclarationExtractor.kt` to use the data-driven capture processor (`@definition.*`, `@name`) using the new `jtreesitter` Query API.
-- [ ] **Task 3.2**: Implement the heuristic AST scope builder for FQN generation using `jtreesitter` nodes.
-    - [ ] Implement upward traversal from definition nodes.
-    - [ ] Implement "Container Check" based on definition captures in ancestors.
-- [ ] **Task 3.3**: Update `DeclarationSearch.kt` to dynamically index files based on the manifest's extension mappings.
-- [ ] **Task 3.4**: Implement hybrid package/module detection (Local overrides + Upstream fallback).
+### 2. FFM Bindings & Models
 
-### 4. Validation & Testing
-- [ ] **Task 4.1**: Create `MultiLanguageIndexingTest` covering symbol extraction for at least 4 languages (e.g., Python, Rust, Go, Scala).
-- [ ] **Task 4.2**: Verify Java/Kotlin regression by running `DeclarationSearchTest`.
-- [ ] **Task 4.3**: Benchmark start-up performance and memory usage with 10+ languages active.
+- [x] **Task 2.1**: Access native `MethodHandle`s via reflection in `dev.kreuzberg.treesitterlanguagepack.NativeLib`
+  - [x] Bypass broken Java record serialization by passing raw JSON strings (Workaround for Issue #115)
+  - [x] Implement error & memory handles: `ts_pack_last_error_code`, `_free_string`
+  - [x] Implement ProcessConfig & Process handles: `_from_json`, `_process`, `_result_to_json`
+- [x] **Task 2.2**: Define minimal models for pattern extractions in `TreeSitterDeclarationExtractor.kt`
+  - [x] `TsPackExtraction`, `TsPackMatch`, `TsPackCapture` (for Kotlin name fallback)
+
+### 3. Native Library & Language Management
+
+- [x] **Task 3.1**: Implement manual native library extraction and loading in `TreeSitterLanguageProvider.kt`
+  - [x] Locate DLL in Gradle cache if missing from JAR (Workaround for Issue #114)
+  - [x] Load via `System.load()`
+- [x] **Task 3.2**: Refactor `TreeSitterLanguageProvider.kt` to use C FFI `DownloadManager` logic via reflection
+- [x] **Task 3.3**: Remove legacy `ParserDownloader.kt` JNI logic
+
+### 4. Declaration Extractor Implementation
+
+- [x] **Task 4.1**: Implement `TreeSitterDeclarationExtractor.kt` using `ts_pack_process()`
+  - [x] Implement recursive tree walking (`collectSymbols`) for nested structure model
+  - [x] Implement FQN construction by carrying context through recursion
+  - [x] Implement Kotlin name fallback using pattern extractions matching byte offsets
+  - [x] Implement package name detection with extractions fallback
+- [x] **Task 4.2**: Clean up dependencies and old query infrastructure
+
+### 5. Build Configuration
+
+- [x] **Task 5.1**: Update `build.gradle.kts` with `tree-sitter-language-pack:1.8.0-rc.24`
+- [x] **Task 5.2**: Add `--enable-native-access=ALL-UNNAMED` to JVM args for tests
+- [x] **Task 5.3**: Remove `jtreesitter` and legacy native dependencies
+
+### 6. Testing & Validation
+
+- [x] **Task 6.1**: Implement comprehensive test suite in `TreeSitterDeclarationExtractorTest.kt`
+  - [x] Verify Java symbol extraction and FQN construction
+  - [x] Verify Kotlin symbol extraction with name fallback
+  - [x] Verify package name detection for both languages
+- [ ] **Task 6.2**: Confirm all tree-sitter tests pass (`./gradlew treeSitterTest` last reached 20 passed / 2 failed on 2026-04-30)
+
+### 7. Pause / Resume Notes
+
+- [x] **Task 7.1**: Document paused status after `tree-sitter-language-pack:1.8.0-rc.24` evaluation
+- [ ] **Task 7.2**: Re-verify upstream Java artifact packaging before resuming; closed issues #114/#115 were not sufficient evidence that the Maven artifact is fixed
+- [ ] **Task 7.3**: Confirm public Java API works on Windows without local `ts_pack_core_ffi.dll`, manual `cache_dir` JSON, or raw `NativeLib` MethodHandle calls
+- [ ] **Task 7.4**: Resolve Kotlin member FQN attribution for declarations such as `com.example.MyKotlinClass.myVal`
+- [ ] **Task 7.5**: Avoid JUnit cleanup of temp cache directories containing loaded Windows parser DLLs, or move parser caches out of auto-deleted temp roots
